--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
       <td><img src="sagar.png" alt="Sagar's Profile pic" height="150" width="150"></td>
       <td>
         <h1>SAGAR DESAI</h1>
-        <P><em><strong>An Enterprenuer and Philanthropist</strong></em></P>
-        <p>I</a> am a CEO of <strong>CODGEN</em></strong>. A group of people who are strongly motivated to provide the digital solution to <strong>Ceramic industries.</strong></p>
+        <P><em><strong>Sales and Marketing coordinator</strong></em></P>
+        <p>Dynamic senior sales coordinator with 7 years of experience in driving revenue growth and enhancing customer satisfaction through strategic sales initiative. Expertises in fostering strong client relationships and leveraging market analysis to uncover new business opportunities. Proficient in Coordinating team efforts to optimise performance and deliver impactful results. Committed to using analytical skills and proactive approach to support sales and marketing objective effectively.</p>
       </td>
     </tr>
   </table>
