--- a/index.html
+++ b/index.html
@@ -1,88 +1,160 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
-
+<html lang="en">
 <head>
-  <meta charset="utf-8">
-  <title>SAGAR DESAI</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Sagar Desai - Resume</title>
+  <style>
+    body {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background-color: #fff;
+      margin: 0;
+      padding: 0;
+      color: #333;
+    }
+    .container {
+      width: 1000px;
+      margin: 0 auto;
+      padding: 30px;
+    }
+    .header {
+      display: flex;
+      align-items: center;
+      border-bottom: 2px solid #ccc;
+      padding-bottom: 20px;
+    }
+    .header img {
+      width: 100px;
+      height: 100px;
+      object-fit: cover;
+      border-radius: 10px;
+      margin-right: 20px;
+    }
+    .header h1 {
+      margin: 0;
+    }
+    .section {
+      margin-top: 30px;
+    }
+    .section h2 {
+      font-size: 20px;
+      margin-bottom: 10px;
+      border-bottom: 2px solid #000;
+      padding-bottom: 5px;
+    }
+    .left, .right {
+      display: inline-block;
+      vertical-align: top;
+    }
+    .left {
+      width: 65%;
+    }
+    .right {
+      width: 30%;
+      margin-left: 5%;
+    }
+    ul {
+      margin-top: 0;
+    }
+    .bar {
+      height: 10px;
+      background: #ddd;
+      margin-bottom: 10px;
+      border-radius: 5px;
+      overflow: hidden;
+    }
+    .bar span {
+      display: block;
+      height: 100%;
+      background: #2196F3;
+    }
+  </style>
 </head>
-
 <body>
-  <table cellspacing="20">
-    <tr>
-      <td><img src="sagar.png" alt="Sagar's Profile pic" height="150" width="150"></td>
-      <td>
-        <h1>SAGAR DESAI</h1>
-        <P><em><strong>Sales and Marketing coordinator</strong></em></P>
-        <p>Dynamic senior sales coordinator with 7 years of experience in driving revenue growth and enhancing customer satisfaction through strategic sales initiative. Expertises in fostering strong client relationships and leveraging market analysis to uncover new business opportunities. Proficient in Coordinating team efforts to optimise performance and deliver impactful results. Committed to using analytical skills and proactive approach to support sales and marketing objective effectively.</p>
-      </td>
-    </tr>
-  </table>
-  <hr size='3' noshade>
-  <h3>EDUCATION</h3>
-  <p>
-    <ul>
-      <li>BE Automobie from <em><a href="https://www.marwadiuniversity.ac.in/">Marwadi Education foundation.</a></em></li>
-      <li>HSEB From <em><a href="https://navodaya.gov.in/nvs/en/Home1">Jawahar Naavodaya Vidhyalaya.</a></em></li>
-    </ul>
-    <hr size="3" noshade>
-    <h3>My Hobbies</h3>
-    <ol>
-      <li>Reading Books</li>
-      <li>Watching Anime and Movies</li>
-      <li>Coding(This is New one and i am making it my hobby)</li>
-      <li>Playing Games</li>
-    </ol>
-    <hr size="3" noshade>
-    <h3>Career</h3>
-    <table cellspacing="10">
-      <thead>
-        <tr>
-          <th>Year</th>
-          <th>Place</th>
-          <th>Job Discripation</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>2017-2018</td>
-          <td>Inside Interior,Morbi</td>
-          <td>Rendering Expert</td>
-        </tr>
-        <tr>
-          <td>2018-Now</td>
-          <td><a href="https://granicer.in/">Granicer Ceramica Indiana</a></td>
-          <td>Sales Cordinator-West Zone</td>
-        </tr>
-      </tbody>
-      <tfoot>
+  <div class="container">
+    <div class="header">
+      <img src="profile.jpg" alt="Sagar Desai">
+      <div>
+        <h1>Sagar Desai</h1>
+        <p>Sales and Marketing Coordinator</p>
+      </div>
+    </div>
 
-      </tfoot>
-    </table>
-  </p>
-  <p>
-    <hr size="3" noshade>
-    <table cellspacing="10">
-      <thead>
-        <h3>Skills</h3>
-      </thead>
-      <tbody>
-        <tr>
-          <td>SketchUp</td>
-          <td>🌟🌟🌟</td>
-          <td>Microsoft Excel</td>
-          <td>🌟🌟🌟🌟🌟</td>
-        </tr>
-        <tr>
-          <td>HTML</td>
-          <td>🌟🌟🌟</td>
-          <td>Photoshop CS6</td>
-          <td>🌟🌟🌟</td>
-        </tr>
-      </tbody>
-    </table>
+    <div class="left">
+      <div class="section">
+        <h2>Profile</h2>
+        <p>Dynamic Senior Sales Coordinator with 7 years of experience in driving revenue growth and enhancing customer satisfaction through strategic sales initiatives. Expertise in fostering strong client relationships and leveraging market analysis to uncover new business opportunities. Proficient in coordinating team efforts to optimise performance and deliver impactful results. Committed to using analytical skills and a proactive approach to support sales and marketing objectives effectively.</p>
+      </div>
+
+      <div class="section">
+        <h2>Employment History</h2>
+        <h3>Senior Sales Coordinator at Comet Granito Pvt Ltd, Morbi</h3>
+        <p><em>April 2018 – Present</em></p>
+        <ul>
+          <li>Coordinated sales activities to optimize team performance and drive revenue growth.</li>
+          <li>Developed and maintained relationships with key clients.</li>
+          <li>Analyzed market trends to identify opportunities.</li>
+          <li>Reported on sales metrics to guide strategic decisions.</li>
+          <li>Managed material delivery and outsourced as needed.</li>
+          <li>Developed custom designs for large projects.</li>
+        </ul>
+
+        <h3>Intern at Inside Interior and Architecture, Morbi</h3>
+        <p><em>May 2017 – November 2017</em></p>
+        <ul>
+          <li>Assisted in selecting material for client interiors.</li>
+          <li>Created 3D design previews as per requirements.</li>
+        </ul>
+      </div>
+
+      <div class="section">
+        <h2>Education</h2>
+        <p><strong>BE Automobile, Marwadi Education Foundation, Rajkot</strong><br>2013 – 2017<br>Graduated with 8.2 CGPA</p>
+        <p><strong>HSC, Jawahar Navodaya Vidhyalaya, Rajkot</strong><br>2012 – 2013</p>
+      </div>
+    </div>
+
+    <div class="right">
+      <div class="section">
+        <h2>Details</h2>
+        <p>703, Dev appartment, Laxmi nagar society, Ravapar Road<br>Morbi, 363641<br>India<br>8460831900<br><a href="mailto:sagardesai393@gmail.com">sagardesai393@gmail.com</a></p>
+      </div>
+
+      <div class="section">
+        <h2>Skills</h2>
+        <ul>
+          <li>Customer Service Skills</li>
+          <li>Marketing</li>
+          <li>Fast Learner</li>
+          <li>Initiative and Problem-solving Abilities</li>
+          <li>Teamwork Skills</li>
+          <li>Microsoft Office</li>
+          <li>Account Management</li>
+          <li>New Product Development</li>
+          <li>Data Analysis and MIS Reporting</li>
+        </ul>
+      </div>
+
+      <div class="section">
+        <h2>Languages</h2>
+        <p>English</p>
+        <div class="bar"><span style="width: 90%;"></span></div>
+        <p>Hindi</p>
+        <div class="bar"><span style="width: 80%;"></span></div>
+        <p>Gujarati</p>
+        <div class="bar"><span style="width: 90%;"></span></div>
+      </div>
+
+      <div class="section">
+        <h2>Hobbies</h2>
+        <ul>
+          <li>Reading</li>
+          <li>Long Drives</li>
+          <li>Travelling</li>
+          <li>Calligraphy</li>
+        </ul>
+      </div>
+    </div>
+  </div>
 </body>
-<hr size="3" noshade>
-<h3><a href="Contact.html">My Contact Details</a></h3>
-</p>
-
 </html>
